--- a/ClusterKit.API/ClusterKit.API.Provider/ClusterKit.API.Provider.csproj
+++ b/ClusterKit.API/ClusterKit.API.Provider/ClusterKit.API.Provider.csproj
@@ -164,17 +164,19 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj">
       <Project>{25E3B4DC-717E-4ECA-A756-3112E2093CFF}</Project>
       <Name>ClusterKit.Security.Client</Name>
-</ProjectReference>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiProvider.cs" />
     <Compile Include="InputContractResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolvers\CollectionResolver.cs" />
+    <Compile Include="Resolvers\NullResolver.cs" />
+    <Compile Include="Resolvers\SimpleCollectionResolver.cs" />
     <Compile Include="Resolvers\EnumResolver.cs" />
     <Compile Include="Resolvers\ForwarderResolver.cs" />
     <Compile Include="Resolvers\ConnectionResolver.cs" />
