--- a/ClusterKit.API/ClusterKit.API.Tests/ClusterKit.API.Tests.csproj
+++ b/ClusterKit.API/ClusterKit.API.Tests/ClusterKit.API.Tests.csproj
@@ -203,15 +203,15 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj">
       <Project>{25E3B4DC-717E-4ECA-A756-3112E2093CFF}</Project>
       <Name>ClusterKit.Security.Client</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj">
       <Project>{33F25E93-E58E-4F90-A6EB-E7C64546D732}</Project>
       <Name>ClusterKit.Core.TestKit</Name>
-</ProjectReference>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiProviderResolveTests.cs" />
@@ -223,6 +223,7 @@
     <Compile Include="Mock\TestObjectConnection.cs" />
     <Compile Include="Mock\TestObjectNoId.cs" />
     <Compile Include="Mock\TestProvider.cs" />
+    <Compile Include="Mock\TestSecondProvider.cs" />
     <Compile Include="Mock\ThirdPartyObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
