GraphQL: GlobalId refactoring missed part II - node searching is working

--- a/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
+++ b/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
@@ -108,9 +108,8 @@
     <Compile Include="MutationApiRequest.cs" />
     <Compile Include="MutationResult.cs" />
     <Compile Include="NamingUtilities.cs" />
-    <Compile Include="NodeSearchApiRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueriApiRequest.cs" />
+    <Compile Include="QueryApiRequest.cs" />
     <Compile Include="QueryResult.cs" />
     <Compile Include="RequestPathElement.cs" />
     <Compile Include="SortingCondition.cs" />
