--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/ClusterKit.NodeManager.ConfigurationSource.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/ClusterKit.NodeManager.ConfigurationSource.csproj
@@ -235,6 +235,7 @@
     <Compile Include="NodeTemplateFactory.cs" />
     <Compile Include="NugetFeedFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReleaseDataFactory.cs" />
     <Compile Include="RoleFactory.cs" />
     <Compile Include="SeedAddressFactorycs.cs" />
     <Compile Include="UserFactoryByLogin.cs" />
