--- a/Docker/ClusterKitMonitoring/clusterkit-web/package.json
+++ b/Docker/ClusterKitMonitoring/clusterkit-web/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "d3": "^4.5.0",
+    "d3": "^4.7.4",
     "formsy-react": "^0.19.2",
     "formsy-react-components": "^0.10.1",
     "graphiql": "^0.9.2",
@@ -35,5 +35,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://entry/api/"
+  "homepage": "http://entry/clusterkit"
 }
