--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
@@ -290,14 +290,18 @@
     <Compile Include="Messages\ActiveNodeDescriptionsRequest.cs" />
     <Compile Include="Messages\AvailableTemplatesRequest.cs" />
     <Compile Include="Messages\NodeUpgradeRequest.cs" />
+    <Compile Include="Messages\ReleaseSetReadyRequest.cs" />
+    <Compile Include="Messages\ReleaseSetStableRequest.cs" />
     <Compile Include="Messages\TemplatesStatisticsRequest.cs" />
     <Compile Include="Messages\TemplatesUsageStatistics.cs" />
+    <Compile Include="Messages\UpdateClusterRequest.cs" />
     <Compile Include="NodeManagerActor.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="NodeManagerApi.cs" />
     <Compile Include="NugetPackagesConnection.cs" />
     <Compile Include="NugetPackagesFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReleaseConnection.cs" />
     <Compile Include="WebApi\AuthenticationController.cs" />
     <Compile Include="WebApi\NodeManagerController.cs" />
     <Compile Include="WebApi\NodeTemplatesRestController.cs" />
