--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
@@ -287,6 +287,9 @@
       <DependentUpon>Configuration.resx</DependentUpon>
     </Compile>
     <Compile Include="Messages\ActiveNodeDescriptionsRequest.cs" />
+    <Compile Include="Messages\UserChangePasswordRequest.cs" />
+    <Compile Include="Messages\UserResetPasswordRequest.cs" />
+    <Compile Include="Messages\UserRoleAddRequest.cs" />
     <Compile Include="Messages\AvailableTemplatesRequest.cs" />
     <Compile Include="Messages\NodeUpgradeRequest.cs" />
     <Compile Include="Messages\ReleaseSetReadyRequest.cs" />
@@ -294,6 +297,8 @@
     <Compile Include="Messages\TemplatesStatisticsRequest.cs" />
     <Compile Include="Messages\TemplatesUsageStatistics.cs" />
     <Compile Include="Messages\UpdateClusterRequest.cs" />
+    <Compile Include="Messages\UserRoleChangeRequest.cs" />
+    <Compile Include="Messages\UserRoleRemoveRequest.cs" />
     <Compile Include="NodeManagerActor.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="NugetPackagesFactory.cs" />
