NodeUpgradeDowngrade: id in release configuration

--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Messages\ShutdownMessage.cs" />
     <Compile Include="Navigation.cs" />
     <Compile Include="NodeManagerReceiverActor.cs" />
+    <Compile Include="ORM\CompatibleTemplate.cs" />
     <Compile Include="ORM\NodeTemplate.cs" />
     <Compile Include="ORM\NugetFeed.cs" />
     <Compile Include="ORM\Release.cs" />
