--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
@@ -287,6 +287,7 @@
       <DependentUpon>Configuration.resx</DependentUpon>
     </Compile>
     <Compile Include="Messages\ActiveNodeDescriptionsRequest.cs" />
+    <Compile Include="Messages\ReleaseSetObsoleteRequest.cs" />
     <Compile Include="Messages\UserChangePasswordRequest.cs" />
     <Compile Include="Messages\UserResetPasswordRequest.cs" />
     <Compile Include="Messages\UserRoleAddRequest.cs" />
