--- a/Docker/ClusterKitMonitoring/clusterkit-web/package.json
+++ b/Docker/ClusterKitMonitoring/clusterkit-web/package.json
@@ -15,6 +15,7 @@
     "graphiql": "^0.9.2",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
+    "react-autosuggest": "^9.0.0",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-fa": "^4.1.2",
