--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
@@ -33,6 +33,10 @@
     <DocumentationFile>bin\Release\ClusterKit.NodeManager.Client.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ClusterKit.NodeManager.Migrator\ClusterKit.NodeManager.Migrator.csproj">
+      <Project>{d85a8d83-3c7d-4cc9-a2b8-6597d2ab8fb2}</Project>
+      <Name>ClusterKit.NodeManager.Migrator</Name>
+    </ProjectReference>
     <Reference Include="Akka, Version=1.1.3.344, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Akka.1.1.3.344-beta\lib\net45\Akka.dll</HintPath>
@@ -161,27 +165,27 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj">
       <Project>{25E3B4DC-717E-4ECA-A756-3112E2093CFF}</Project>
       <Name>ClusterKit.Security.Client</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Attributes/ClusterKit.Security.Attributes.csproj">
       <Project>{42524C94-892D-4258-BD2C-D6F24D7BFABB}</Project>
       <Name>ClusterKit.Security.Attributes</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj">
       <Project>{2A6EDCC4-C729-4BEE-9BB5-AC6F76B3BAC8}</Project>
       <Name>ClusterKit.API.Client</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.API/ClusterKit.API.Attributes/ClusterKit.API.Attributes.csproj">
       <Project>{7654B200-7C4F-450C-8013-C59D7B6CE8B7}</Project>
       <Name>ClusterKit.API.Attributes</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Data/ClusterKit.Data.CRUD/ClusterKit.Data.CRUD.csproj">
       <Project>{FDA59712-9625-4CDF-B8FD-6DF19960C8C0}</Project>
       <Name>ClusterKit.Data.CRUD</Name>
-    </ProjectReference>
+</ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiSurrogates\AkkaAddressSurrogate.cs" />
@@ -200,8 +204,14 @@
     <Compile Include="Messages\ShutdownMessage.cs" />
     <Compile Include="Navigation.cs" />
     <Compile Include="NodeManagerReceiverActor.cs" />
+    <Compile Include="ORM\Migration.cs" />
+    <Compile Include="ORM\MigrationOperation.cs" />
     <Compile Include="ORM\CompatibleTemplate.cs" />
-    <Compile Include="ORM\NodeTemplate.cs" />
+    <Compile Include="ORM\EnClusterMigrationOperationState.cs" />
+    <Compile Include="ORM\EnMigrationDirection.cs" />
+    <Compile Include="ORM\EnMigrationState.cs" />
+    <Compile Include="ORM\EnReleaseState.cs" />
+    <Compile Include="ORM\MigratorTemplate.cs" />
     <Compile Include="ORM\NugetFeed.cs" />
     <Compile Include="ORM\Release.cs" />
     <Compile Include="ORM\ReleaseConfiguration.cs" />
