--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.DbTests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.DbTests/packages.config
@@ -40,8 +40,10 @@
   <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net46" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Npgsql" version="3.1.9" targetFramework="net46" />
+  <package id="NuGet.Core" version="2.14.0" targetFramework="net46" />
   <package id="Serilog" version="2.4.0" targetFramework="net46" />
   <package id="Serilog.Sinks.ColoredConsole" version="2.0.0" targetFramework="net46" />
   <package id="Serilog.Sinks.TextWriter" version="2.1.0" targetFramework="net46" />
