--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource.Seeder/ClusterKit.NodeManager.ConfigurationSource.Seeder.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource.Seeder/ClusterKit.NodeManager.ConfigurationSource.Seeder.csproj
@@ -43,6 +43,10 @@
       <Project>{25f679d9-4de1-4b82-b7a1-67ad3658cdfa}</Project>
       <Name>ClusterKit.NodeManager.ConfigurationSource</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.NodeManager.Launcher.Messages\ClusterKit.NodeManager.Launcher.Messages.csproj">
+      <Project>{874AC41B-A084-4EED-9B7F-6B82EFC416EE}</Project>
+      <Name>ClusterKit.NodeManager.Launcher.Messages</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.NodeManager.Migrator.EF\ClusterKit.NodeManager.Migrator.EF.csproj">
       <Project>{b03e1498-8b20-4d26-83bc-e42787a4ea62}</Project>
       <Name>ClusterKit.NodeManager.Migrator.EF</Name>
@@ -340,6 +344,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configurations.Designer.cs">
+      <DependentUpon>Configurations.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seeder.cs" />
   </ItemGroup>
@@ -349,6 +358,17 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Resources\clusterManager.hocon" />
+    <None Include="Resources\empty.hocon" />
+    <None Include="Resources\migrator.hocon" />
+    <None Include="Resources\publisher.hocon" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Configurations.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Configurations.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
