--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
@@ -12,6 +12,7 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.4.0" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="DotNetty.Buffers" version="0.3.2" targetFramework="net46" />
   <package id="DotNetty.Codecs" version="0.3.2" targetFramework="net46" />
   <package id="DotNetty.Common" version="0.3.2" targetFramework="net46" />
