NodeUpgradeDowngrade: messages refactoring

--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
@@ -199,9 +199,27 @@
     <Compile Include="LoggerConfigurator.cs" />
     <Compile Include="Messages\AuthenticateUserWithCredentials.cs" />
     <Compile Include="Messages\AuthenticateUserWithUid.cs" />
+    <Compile Include="Messages\Migration\EnMigrationActorMigrationPosition.cs" />
+    <Compile Include="Messages\Migration\MigrationActorInitializationFailed.cs" />
+    <Compile Include="Messages\Migration\MigrationActorMigrationState.cs" />
+    <Compile Include="Messages\Migration\MigrationActorReleaseState.cs" />
+    <Compile Include="Messages\Migration\ProcessingTheRequest.cs" />
+    <Compile Include="Messages\Migration\RecheckState.cs" />
+    <Compile Include="Messages\Migration\RequestAcknowledged.cs" />
+    <Compile Include="Messages\Migration\RequestDeclined.cs" />
+    <Compile Include="Messages\Migration\ResourceUpgrade.cs" />
     <Compile Include="Messages\NodeDescription.cs" />
     <Compile Include="Messages\NodeDescriptionRequest.cs" />
     <Compile Include="Messages\ShutdownMessage.cs" />
+    <Compile Include="MigrationStates\EnMigrationSide.cs" />
+    <Compile Include="MigrationStates\EnMigratorPosition.cs" />
+    <Compile Include="MigrationStates\EnResourcePosition.cs" />
+    <Compile Include="MigrationStates\MigratorMigrationState.cs" />
+    <Compile Include="MigrationStates\MigratorReleaseState.cs" />
+    <Compile Include="MigrationStates\MigratorTemplateMigrationState.cs" />
+    <Compile Include="MigrationStates\MigratorTemplateReleaseState.cs" />
+    <Compile Include="MigrationStates\ResourceMigrationState.cs" />
+    <Compile Include="MigrationStates\ResourceReleaseState.cs" />
     <Compile Include="Navigation.cs" />
     <Compile Include="NodeManagerReceiverActor.cs" />
     <Compile Include="ORM\ITemplate.cs" />
