--- a/Docker/ClusterKitPublisher/fallBackConfiguration.json
+++ b/Docker/ClusterKitPublisher/fallBackConfiguration.json
@@ -1,7 +1,6 @@
 {
   "Configuration": "{\n   ClusterKit {\n     Web {\n       Nginx {\n         PathToConfig = \"/etc/nginx/sites-enabled/clusterkit.config\"\n         ReloadCommand {\n           Command = /etc/init.d/nginx\n           Arguments = reload\n         } \n         Configuration {\n           default {\n             \"location /clusterkit\" { \n               proxy_pass = \"http://monitoringUI/clusterkit\"\n             }\n           }\n         }\n       }\n     }\n   }\n \n   akka {\n     remote {\n       helios {\n         tcp {\n           hostname = 0.0.0.0\n           port = 0\n         }\n       }\n     }\n     cluster {\n       seed-nodes = []\n     }\n   }\n }\n",
   "NodeTemplate": "publisher",
-  "NodeTemplateVersion": 0,
   "ReleaseId": 1,
   "Packages": [
     {
@@ -106,6 +105,10 @@
     },
     {
       "Id": "ClusterKit.NodeManager.Launcher.Messages",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.NodeManager.Migrator",
       "Version": "0.0.0-local"
     },
     {
