--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Seeder/ClusterKit.NodeManager.Seeder.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Seeder/ClusterKit.NodeManager.Seeder.csproj
@@ -151,10 +151,18 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Attributes/ClusterKit.Security.Attributes.csproj">
+      <Project>{42524C94-892D-4258-BD2C-D6F24D7BFABB}</Project>
+      <Name>ClusterKit.Security.Attributes</Name>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.API/ClusterKit.API.Attributes/ClusterKit.API.Attributes.csproj">
+      <Project>{7654B200-7C4F-450C-8013-C59D7B6CE8B7}</Project>
+      <Name>ClusterKit.API.Attributes</Name>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-    </ProjectReference>
+</ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -165,14 +173,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ClusterKit.API\ClusterKit.API.Attributes\ClusterKit.API.Attributes.csproj">
-      <Project>{7654b200-7c4f-450c-8013-c59d7b6ce8b7}</Project>
-      <Name>ClusterKit.API.Attributes</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ClusterKit.Security\ClusterKit.Security.Attributes\ClusterKit.Security.Attributes.csproj">
-      <Project>{42524c94-892d-4258-bd2c-d6f24d7bfabb}</Project>
-      <Name>ClusterKit.Security.Attributes</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.NodeManager.Migrator\ClusterKit.NodeManager.Migrator.csproj">
       <Project>{D85A8D83-3C7D-4CC9-A2B8-6597D2AB8FB2}</Project>
       <Name>ClusterKit.NodeManager.Migrator</Name>
